# hariboteOSByRust

./: .editorconfig  .gitignore  Cargo.toml  Makefile  hankaku.rb  i686-unknown-none.json
docker/: Dockerfile
src/: bootpack.rs  osfunc.asm  serial.rs
