[package]
name = "dekoos"
version = "0.0.1"
authors = ["dekokun"]

[lib]
path = "src/bootpack.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = 2

[dependencies]
rlibc = "1.0.0"
uart_16550 = "0.1.0"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

